# MagOS

./: .gitignore  Loginmgr.py  Main.py  README.md  echo.py  help.py  joke.py  loginmgr.json  pyproject.toml  requirements.txt  snake.py  useredit.py
